{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "27f39b2d-dfbb-4b47-935f-16fd12b36acd",
            "actions": [
                {
                    "name": "FireDirection",
                    "type": "Button",
                    "id": "53b70a75-0f59-4019-a253-5cac3a58634f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4893bbcf-0f12-4685-9d7c-fdc50ea6cba4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}